force-app/main/default/objects/Research_Opportunity__c/Research_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Funding Opportunity</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>