force-app/main/default/objects/Research_Opportunity__c/fields/Amount_of_Funding_Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Funding_Available_Budget__c</fullName>
    <label>Amount of Funding/Available Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>