force-app/main/default/objects/Research_Opportunity__c/fields/Application_limit_for_institutions__c.field-meta.xml
<CustomField>
    <fullName>Application_limit_for_institutions__c</fullName>
    <inlineHelpText>Limitation of proposals under funding body rules or requirement for one tender proposal representing My Uni&apos;s broad expertise</inlineHelpText>
    <label>Application limit for My Uni</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>