force-app/main/default/objects/Research_Opportunity__c/fields/Career_Stage__c.field-meta.xml
<CustomField>
    <fullName>Career_Stage__c</fullName>
    <inlineHelpText>Stage of research career this opportunity is suitable for (if applicable)</inlineHelpText>
    <label>Career Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early career</fullName>
            </value>
            <value>
                <fullName>Mid career</fullName>
            </value>
            <value>
                <fullName>Senior fellowship</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>