force-app/main/default/objects/Research_Opportunity__c/fields/Competitive__c.field-meta.xml
<CustomField>
    <fullName>Competitive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This funding opportunity is awarded via a competitive process</inlineHelpText>
    <label>Competitive</label>
    <type>Checkbox</type>
</CustomField>