force-app/main/default/objects/Research_Opportunity__c/fields/Display_on_profile__c.field-meta.xml
<CustomField>
    <fullName>Display_on_profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display on profile</label>
    <type>Checkbox</type>
</CustomField>