force-app/main/default/objects/Research_Opportunity__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>The proposed duration of the project</inlineHelpText>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>