force-app/main/default/objects/Research_Opportunity__c/fields/Funding_Body_Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Funding_Body_Client_Reference__c</fullName>
    <label>Funding Body Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>