force-app/main/default/objects/Research_Opportunity__c/fields/Funding_Category__c.field-meta.xml
<CustomField>
    <fullName>Funding_Category__c</fullName>
    <label>HERDC Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cat 1</fullName>
            </value>
            <value>
                <fullName>Cat 2</fullName>
            </value>
            <value>
                <fullName>Cat 3</fullName>
            </value>
            <value>
                <fullName>Cat 4</fullName>
            </value>
            <value>
                <fullName>Non-HERDC consulting</fullName>
            </value>
            <value>
                <fullName>Non-HERDC Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>