force-app/main/default/objects/Research_Opportunity__c/fields/Funding_Org_Contact__c.field-meta.xml
<CustomField>
    <fullName>Funding_Org_Contact__c</fullName>
    <label>Funding Body Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>