force-app/main/default/objects/Research_Opportunity__c/fields/Long_Title__c.field-meta.xml
<CustomField>
    <fullName>Long_Title__c</fullName>
    <label>Long Title</label>
    <type>TextArea</type>
</CustomField>