force-app/main/default/objects/Research_Opportunity__c/fields/Maximum_Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Available_Budget__c</fullName>
    <label>Maximum Available Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>