force-app/main/default/objects/Research_Opportunity__c/fields/Minimum_Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Available_Budget__c</fullName>
    <label>Minimum Available Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>