force-app/main/default/objects/Research_Opportunity__c/fields/NOI_Round__c.field-meta.xml
<CustomField>
    <fullName>NOI_Round__c</fullName>
    <description>Indicating which NOI process this opportunity belongs to</description>
    <inlineHelpText>Type of Notice of Intent Round</inlineHelpText>
    <label>NOI Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARC/NHMRC 2021</fullName>
            </value>
            <value>
                <fullName>Linkage 2021</fullName>
            </value>
            <value>
                <fullName>Fellowship 2021</fullName>
            </value>
            <value>
                <fullName>Limited Applications</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>