force-app/main/default/objects/Research_Opportunity__c/fields/Notice_of_Intent_Required__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Intent_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notice of Intent Required</label>
    <type>Checkbox</type>
</CustomField>