force-app/main/default/objects/Research_Opportunity__c/fields/Number_of_Project_Proposals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Project_Proposals__c</fullName>
    <label>Number of Projects/Project Proposals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>