force-app/main/default/objects/Research_Opportunity__c/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box to restrict visibility of this funding opportunity to specified researchers. This opportunity will not be searchable.</inlineHelpText>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>