force-app/main/default/objects/Research_Opportunity__c/fields/Research_Office_Contact__c.field-meta.xml
<CustomField>
    <fullName>Research_Office_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Portfolio Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>