force-app/main/default/objects/Research_Opportunity__c/fields/Research_Office_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Research_Office_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Office Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Opportunities</relationshipLabel>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>