force-app/main/default/objects/Research_Opportunity__c/fields/Research_Office_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Research_Office_Due_Date__c</fullName>
    <inlineHelpText>The date the proposal is due for review by the Research Portfolio</inlineHelpText>
    <label>Internal Date</label>
    <type>Date</type>
</CustomField>