force-app/main/default/objects/Research_Opportunity__c/fields/Research_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Research_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Scheme</label>
    <referenceTo>Research_Opportunity__c</referenceTo>
    <relationshipLabel>Funding Opportunities (Funding Scheme)</relationshipLabel>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>