force-app/main/default/objects/Research_Opportunity__c/fields/RP_ID__c.field-meta.xml
<CustomField>
    <fullName>RP_ID__c</fullName>
    <label>RP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>