force-app/main/default/objects/Research_Opportunity__c/fields/Scholarship_Component__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship Component</label>
    <type>Checkbox</type>
</CustomField>