force-app/main/default/objects/Research_Opportunity__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source of opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approach by industry</fullName>
            </value>
            <value>
                <fullName>Publicly available</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Grant connect</fullName>
            </value>
            <value>
                <fullName>Research Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>