force-app/main/default/objects/Research_Opportunity__c/fields/Student_led__c.field-meta.xml
<CustomField>
    <fullName>Student_led__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This funding opportunity is for a Student to lead</inlineHelpText>
    <label>Student led</label>
    <type>Checkbox</type>
</CustomField>