force-app/main/default/objects/Research_Opportunity__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <inlineHelpText>The Funder&apos;s due date for the proposal</inlineHelpText>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>