force-app/main/default/objects/Research_Opportunity__c/fields/Type_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Opportunity__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Quote/Proposal</fullName>
            </value>
            <value>
                <fullName>Tender/RFQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>