force-app/main/default/objects/Research_Opportunity__c/fields/Type_of_relationship__c.field-meta.xml
<CustomField>
    <fullName>Type_of_relationship__c</fullName>
    <label>Type of relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Sub-contractor</fullName>
            </value>
            <value>
                <fullName>Funding body/client (i.e. awards)</fullName>
            </value>
            <value>
                <fullName>Transfer In</fullName>
            </value>
            <value>
                <fullName>Transfer Out</fullName>
            </value>
            <value>
                <fullName>Relinquish</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Transfer of administration to My Uni</fullName>
            </value>
            <value>
                <fullName>Transfer of administration from My Uni</fullName>
            </value>
            <value>
                <fullName>Transfer of administration from JCU</fullName>
                <isActive>false</isActive>
                <label>Transfer of administration from JCU</label>
            </value>
            <value>
                <fullName>Transfer of administration to JCU</fullName>
                <isActive>false</isActive>
                <label>Transfer of administration to JCU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>