force-app/main/default/objects/Research_Opportunity__c/fields/URL_to_Website__c.field-meta.xml
<CustomField>
    <fullName>URL_to_Website__c</fullName>
    <label>Link to Website</label>
    <type>Url</type>
</CustomField>