force-app/main/default/objects/Research_Opportunity__c/fields/Withdrawal_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Date__c</fullName>
    <label>Withdrawal Date</label>
    <type>Date</type>
</CustomField>