force-app/main/default/objects/Research_Opportunity__c/validationRules/Currency_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_of_Funding_Available_Budget__c &lt; 0</errorConditionFormula>
    <errorMessage>Currency cannot be negative</errorMessage>
</ValidationRule>