force-app/main/default/objects/Research_Opportunity__c/validationRules/End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End date can&apos;t be less than start date</errorMessage>
</ValidationRule>