force-app/main/default/objects/Research_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Funder__c</columns>
    <columns>Funding_Category__c</columns>
    <columns>Duration__c</columns>
    <columns>Research_Office_Contact_Person__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>