force-app/main/default/objects/Research_Opportunity__c/listViews/DECRA_Funding_Opportunities.listView-meta.xml
<ListView>
    <fullName>DECRA_Funding_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Funder__c</columns>
    <columns>Funding_Category__c</columns>
    <columns>Duration__c</columns>
    <columns>Research_Office_Contact_Person__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>DECRA</value>
    </filters>
    <label>DECRA Funding Opportunities</label>
</ListView>