force-app/main/default/objects/Research_Opportunity__c/listViews/My_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Funder__c</columns>
    <columns>Funding_Category__c</columns>
    <columns>Duration__c</columns>
    <columns>Research_Office_Contact_Person__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Opportunities</label>
</ListView>